[gd_scene load_steps=3 format=3 uid="uid://8yoim2sbrlwv"]

[ext_resource type="Script" path="res://scenes/config/settings/system/SystemEditor.gd" id="1"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="2"]

[node name="SystemEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Photo:"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/VBoxContainer/Label"]
script = ExtResource("2")
previous = NodePath("../../../../Emulators")
next = NodePath("../../Photo")

[node name="Photo" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../HBoxContainer3/Name")
disabled = true
clip_text = true
expand_icon = true

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/VBoxContainer/Photo"]
script = ExtResource("2")
previous = NodePath("../../Label")
next = NodePath("../../../VBoxContainer2/Label")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Logo:"

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/VBoxContainer2/Label"]
script = ExtResource("2")
previous = NodePath("../../../VBoxContainer/Photo")
next = NodePath("../../Logo")

[node name="Logo" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../../../HBoxContainer3/Name")
disabled = true
clip_text = true
expand_icon = true

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/VBoxContainer2/Logo"]
script = ExtResource("2")
previous = NodePath("../../Label")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Identifier: "

[node name="Identifier" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer2/Identifier"]
script = ExtResource("2")

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "Name: "

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer3/Label"]
script = ExtResource("2")

[node name="Name" type="LineEdit" parent="HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../HBoxContainer/VBoxContainer/Photo")
placeholder_text = "System name"
caret_blink = true
caret_blink_interval = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer4"]
layout_mode = 2
text = "Category: "

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer4/Label"]
script = ExtResource("2")

[node name="Category" type="OptionButton" parent="HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../../HBoxContainer6/ChangeExtensions")
item_count = 5
selected = 0
popup/item_0/text = "Console"
popup/item_0/id = 0
popup/item_1/text = "Arcade"
popup/item_1/id = 1
popup/item_2/text = "Computer"
popup/item_2/id = 2
popup/item_3/text = "Game Engine"
popup/item_3/id = 3
popup/item_4/text = "Modern Console"
popup/item_4/id = 4

[node name="HBoxContainer6" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer6"]
layout_mode = 2
size_flags_vertical = 0
text = "Supported extensions: "

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer6/Label"]
script = ExtResource("2")

[node name="Extensions" type="Label" parent="HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../HBoxContainer5/HBoxContainer/AddEmulator")

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer6/Extensions"]
script = ExtResource("2")

[node name="ChangeExtensions" type="Button" parent="HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../../HBoxContainer4/Category")
text = "Change"

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer5"]
layout_mode = 2
text = "Emulators: "

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer5/Label"]
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10

[node name="AddEmulator" type="Button" parent="HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../HBoxContainer6/ChangeExtensions")
text = "Add"

[node name="Emulators" type="Tree" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_root = true
single_click_select = true

[node name="AccessibilityFocus" type="Node" parent="Emulators"]
script = ExtResource("2")
next = NodePath("../../HBoxContainer/VBoxContainer/Label")

[connection signal="text_changed" from="HBoxContainer3/Name" to="." method="_on_item_change"]
[connection signal="item_selected" from="HBoxContainer4/Category" to="." method="_on_item_change"]
[connection signal="pressed" from="HBoxContainer6/ChangeExtensions" to="." method="_on_ChangeExtensions_pressed"]
[connection signal="pressed" from="HBoxContainer5/HBoxContainer/AddEmulator" to="." method="_on_AddEmulator_pressed"]
[connection signal="item_activated" from="Emulators" to="." method="_on_Emulators_item_activated"]
